# personal-site

./: README.md
conference-rs/: Cargo.toml  Dockerfile  fly.toml
conference-rs/src/: coordinator.rs  main.rs  session.rs
docs/: actix-flow.puml  webrtc-flow.puml
personal-site/: README.md  package-lock.json  package.json
personal-site/app/: layout.tsx  providers.tsx  theme.tsx
personal-site/app/articles/: page.tsx
personal-site/app/articles/[slug]/: page.tsx
personal-site/app/conference/: page.tsx
personal-site/component/: about.tsx  blog.tsx  navbar.tsx  videoPlayer.tsx
personal-site/store/: closer.tsx
